# bootcamp_lv_python11-15

./: .gitignore  README.md  class.py  csv-class.py  csv_classe.py  encapsulamento.py  exemplo.csv  functional.py  pyproject.toml  src-test.py  start.py  usar_class.py
data/: products.csv
